# Simulation

./: .gitignore  LICENSE  README.md  config.example.toml  pyproject.toml
src/simulation/: config.py  entities.py  factories.py  main.py  path_finder.py  renderer.py  simulation.py  world_map.py
src/simulation/actions/: __init__.py  base.py  lifecycle.py  movement.py  resource.py  spawn.py
